# RTControlDualArm

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.md  README.md  RTClient.cpp  RTClient.h  RTControlDualArm.doxyfile
.github/workflows/: codeql-analysis.yml
.tracecompass/: .project
Control/: CMakeLists.txt  Controller.cpp  Controller.h  KistHand.cpp  Motion.cpp  Motion.h
EcatSystem/: CMakeLists.txt  Ecat_Elmo.h  Ecat_KistFinger.h  Ecat_KistSensor.h  Ecat_Master.cpp  Ecat_Master.h  Ecat_Maxon.h  Ecat_Slave.h  PDOConfig.c  PDOConfig.h  RTControlSocket.h
KDL/: CMakeLists.txt  LieDynamics.cpp  LieDynamics.h  LieOperator.cpp  PoEKinematics.cpp  PoEKinematics.h  PropertyDefinition.cpp  PropertyDefinition.h  SerialManipulator.cpp  SerialManipulator.h  motionlibrary.h
KDLUtils/: CMakeLists.txt
Network/: CMakeLists.txt  EcatControlSocket.h  EcatDataSocket.cpp  EcatDataSocket.h  KRISSSensorHandler.h  PacketHandler.h  SocketHandler.h
Release/: RTControlDualArm  makefile  objects.mk  sources.mk  subdir.mk
Release/Control/: subdir.mk
Release/EcatSystem/: subdir.mk
Release/KDL/: subdir.mk
Util/: CMakeLists.txt
Utils/: CMakeLists.txt
cmake/: CMakeFunctions.cmake  FindEigen.cmake  FindEtherlab.cmake  FindKernelHeaders.cmake  FindNRMKHW.cmake  FindPoco.cmake  FindXenomai.cmake
doc/: Doxyfile.in
include/: RTClient.h
include/control/: Controller.h  KistHand.h  Motion.h  Trajectory.h
include/ecat/: Ecat_Elmo.h  Ecat_KistFinger.h  Ecat_KistSensor.h  Ecat_Master.h  Ecat_Maxon.h  Ecat_Slave.h  PDOConfig.h
include/ecat/core/: CiA402Device.h  Ecat_Master.h  Ecat_Slave.h  PDOConfig.h
include/ecat/slaves/: Ecat_Elmo.h  Ecat_KistFinger.h  Ecat_KistSensor.h  Ecat_Maxon.h
include/kdl/: LieDynamics.h  LieOperator.h  PoEKinematics.h  PropertyDefinition.h  SerialManipulator.h  motionlibrary.h
include/net/: KRISSSensorHandler.h  PacketHandler.h  SocketHandler.h
include/util/: SPSCQueue.h
modules/: CodeCoverage.cmake  FindEtherlab.cmake  FindNRMKHW.cmake  FindNRMKhelper.cmake  FindPoco.cmake  FindXenomai.cmake
modules/helper/inc/: NRMKControlSocket.h  NRMKDataSocket.h  NRMKHelper.h  NRMKSocketBase.h  SocketComm.h
modules/helper/lib/: NRMKCore.exp  NRMKCored.exp  NRMKHelper.exp  NRMKHelperd.exp
modules/helper/lib64/: NRMKCore.exp  NRMKCored.exp  NRMKHelper.exp  NRMKHelperd.exp
modules/hw/canfestival/: can_driver.h  config.h
modules/hw/canfestival/timers_xeno/: timerscfg.h
modules/hw/canfestival/unix/: applicfg.h  canfestival.h
modules/hw/inc/: NRMKhw_tp.h  NRMKsercan_tp.h
script/: build.sh
src/: main.cpp
src/control/: CMakeLists.txt  Controller.cpp  KistHand.cpp  Motion.cpp  Trajectory.cpp
src/ecat/: CMakeLists.txt  Ecat_Master.cpp  PDOConfig.c
src/ecat/core/: Ecat_Master.cpp  PDOConfig.c
src/kdl/: CMakeLists.txt  LieDynamics.cpp  LieOperator.cpp  PoEKinematics.cpp  PropertyDefinition.cpp  SerialManipulator.cpp  ellipsoid.cpp  similarity.cpp
src/net/: CMakeLists.txt
